--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -74,3 +74,95 @@
         background-color: #3e52ff !important;
     }
 }
+
+@media screen and (min-width: 339px) {
+    .projects-section {
+        display: flex; 
+        flex-direction: column; 
+        height: 50rem;
+        margin: 5% 5% 0;
+    }
+
+    .projects-title {
+        font-size: 4vh;
+        color: white;
+        font-family: 'Fira Code', Courier, monospace;
+        z-index: 5;
+    }
+
+    .projects-box {
+        background-color: #00c1c1;
+        width: 25%;
+        height: 1.5em;
+        margin-top: 15px;
+        margin-left: 6%;
+        position: absolute;
+    }
+
+    .project-card {
+        margin-top: 5%;
+        position: absolute;
+        width: 48%;
+        padding: 1rem;
+        left: 50%; 
+    }
+
+    .tech {
+        font-size: 0.55em;
+    }
+    
+    .tech-title {
+        font-size: 0.7em !important;
+    }
+    
+    .tech-description {
+        font-size: 0.6em;
+    }
+
+    .github-btn {
+        position: relative !important;
+        background-color: transparent !important;
+        border: 3px solid #00fff0 !important;
+        padding: 0.5em !important;
+        border-radius: 0 !important;
+        font-size: 80% !important;
+        clip-path: polygon(10% 0, 90% 0, 100% 10%, 100% 90%, 90% 100%, 10% 100%, 0 90%, 0 9%) !important;
+    }
+
+    .github-btn:hover {
+        border-color: #007373 !important;
+    }
+
+    .title-section {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .cards {
+        border-radius: 15px !important;
+        border: 1px solid rgb(48, 48, 48) !important;
+        background-image: url("src/assets/images/sky.jpg") !important;
+        background-size: cover;
+    }
+
+    .card-btn-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .card-btn {
+        background-image: linear-gradient(135deg, rgb(144, 242, 255), rgb(0, 22, 102)) !important;
+        color: black !important;
+        border-radius: 30px !important; 
+        padding: 1% 4% !important;
+        border: none !important;
+        font-size: 0.7em !important;
+    }
+
+    .card-btn:hover {
+        background-color: #3e52ff !important;
+    }
+}
+
