--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -63,3 +63,79 @@
         margin-right: 1em;
     }
 }
+
+@media screen and (min-width: 339px) {
+    .footer {
+        display: flex;
+        color: white;
+        flex-direction: column;
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+        border-top: 1px solid transparent;
+        border-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.3), white, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0)); 
+        border-image-slice: 1;
+    }
+
+    .footer-name {
+        font-weight: bold;
+        flex-direction: column;
+        font-family: 'Fira Code', Courier, monospace;
+        font-size: 0.9em;
+        display: flex;
+        align-items: center;
+    }
+
+    .footer-navbar {
+        flex-direction: column !important;
+        margin: 0 !important;
+        padding-left: 5% !important;
+        width: auto !important;
+    }
+
+    .footer-footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .link-list {
+        display: flex !important;
+        flex-direction: column !important;
+        justify-content: flex-start !important;
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 1em !important;
+    }
+
+    .links-title {
+        margin-bottom: 0.5em !important;
+        font-family: 'Fira Code', Courier, monospace;
+    }
+
+    .contact-title {
+        font-family: 'Fira Code', Courier, monospace;
+        margin-bottom: 0.5em;
+    }
+
+    .contact-info {
+        flex-direction: column;
+        font-size: 0.9em;;
+    }
+
+    .contact-container {
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    .social-media {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2em;
+        color: white !important;
+    }
+
+    .bi-linkedin {
+        margin-right: 1em;
+    }
+}
+
