fixed it so its more responsive to different screens

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 799.99px) {
     .about-section {
         margin: 5%;
     }
@@ -60,7 +60,7 @@
     }
 }
 
-@media screen and (min-width: 339px) {
+@media screen and (max-width: 799px) {
     .about-section {
         margin: 5%;
     }
