--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 #Home {
-  background-image: url('public/assets/images/bg1.jpg');
+  background-image: url('/assets/images/bg1.jpg');
   background-size: cover;
   background-position: center;
 }
